--- a/index.html
+++ b/index.html
@@ -3,121 +3,89 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>phantekzy | Terminal Portfolio</title>
+  <title>phantekzy | Advanced Terminal Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
     :root {
       --bg: #000;
-      --terminal: #000;
       --text: #33ff33;
-      --cursor: #33ff33;
     }
-
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: var(--bg);
-      color: var(--text);
-      font-family: 'Fira Code', monospace;
-      overflow: hidden;
-    }
-
-    #terminal {
-      width: 100%;
-      height: 100vh;
-      padding: 20px;
-      background: var(--terminal);
-      white-space: pre-wrap;
-      overflow-y: auto;
-      box-sizing: border-box;
-    }
-
-    .cursor {
-      display: inline-block;
-      width: 10px;
-      height: 1em;
-      margin-left: 5px;
-      background: var(--cursor);
-      animation: blink 1s step-start infinite;
-    }
-
-    a {
-      color: var(--text);
-      text-decoration: underline;
-    }
-
-    @keyframes blink {
-      50% { opacity: 0; }
-    }
+    .theme-ubuntu { --bg: #300a24; --text: #ff6600; }
+    .theme-matrix { --bg: #001100; --text: #00ff00; }
+    body { margin:0; height:100vh; background:var(--bg); color:var(--text); font-family:'Fira Code', monospace; }
+    #terminal { box-sizing:border-box; padding:20px; height:100%; overflow-y:auto; }
+    .line { display:flex; }
+    .prompt { flex-shrink:0; }
+    #cmdline { background:transparent; border:none; outline:none; color:inherit; flex:1; font:inherit; }
+    .cursor { width:8px; background:var(--text); animation:blink .8s steps(1) infinite; }
+    @keyframes blink {50%{opacity:0}}
+    a { color:var(--text); text-decoration:underline; }
   </style>
 </head>
-<body>
+<body class="theme-matrix">
   <div id="terminal"></div>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     const terminal = document.getElementById('terminal');
-
-    const delay = (ms) => new Promise(res => setTimeout(res, ms));
-    const typeLine = (line) => {
-      return new Promise(resolve => {
-        const div = document.createElement('div');
-        terminal.appendChild(div);
-        new Typed(div, {
-          strings: [line],
-          typeSpeed: 20,
-          showCursor: false,
-          onComplete: () => resolve()
-        });
-      });
+    const themes = ['matrix','ubuntu'];
+    let history = [], histIdx = 0;
+    const data = {
+      about: '## About Me\nSelf-taught developer transitioning into CyberSec. Passionate about Linux and open source.',
+      skills: '- HTML5\n- CSS3\n- JavaScript\n- PHP\n- Node.js\n- React\n- MySQL\n- Linux\n- Bash\n- Git',
+      projects: '- **Terminal Portfolio**: This site!\n- **CyberSec Tools**: Collection of pentesting scripts\n- **React Weather App**: Live forecast app',
+      certifications: '- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JS Algorithms\n- IBM Cybersecurity Analyst (In Progress)',
+      goals: '1. Master Fullstack\n2. Specialize in CyberSec\n3. Learn German\n4. Get remote job\n5. Move to Europe'
     };
-
-    const insertBlock = (text) => {
-      const pre = document.createElement('pre');
-      pre.innerHTML = text;
-      terminal.appendChild(pre);
+    function print(html=''){
+      const div = document.createElement('div'); div.innerHTML = html; terminal.appendChild(div);
       terminal.scrollTop = terminal.scrollHeight;
-    };
-
-    async function runTerminal() {
-      await typeLine('[phantekzy@linux ~]$ whoami');
-      insertBlock(`Name     : Maini Lotfi Abdelkader\nAlias    : phantekzy\nLocation : Algiers, Algeria\nAge      : 28\nMotto    : "Learn. Build. Play Dark Souls. Repeat."`);
-
-      await typeLine('[phantekzy@linux ~]$ cat about.txt');
-      insertBlock(`Self-taught web developer transitioning into cybersecurity. Passionate about Linux, open-source, and making an impact through code.`);
-
-      await typeLine('[phantekzy@linux ~]$ ls skills/');
-      insertBlock(`- HTML5\n- CSS3\n- JavaScript\n- PHP\n- Node.js\n- React\n- MySQL\n- Git & GitHub\n- Bash & Linux`);
-
-      await typeLine('[phantekzy@linux ~]$ ls projects/');
-      insertBlock(`- Terminal Portfolio Website\n- CyberSec Tools Collection\n- React Weather App\n- Personal Blog (In Progress)`);
-
-      await typeLine('[phantekzy@linux ~]$ cat certifications.txt');
-      insertBlock(`- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JavaScript Algorithms\n- IBM Cybersecurity Analyst (In Progress)`);
-
-      await typeLine('[phantekzy@linux ~]$ cat experience.txt');
-      insertBlock(`Currently learning and building real-world projects.\nVolunteered for small freelance websites (HTML/CSS).\nActively participating in CTF challenges for cybersecurity.`);
-
-      await typeLine('[phantekzy@linux ~]$ cat goals.txt');
-      insertBlock(`1. Master Fullstack Development\n2. Specialize in CyberSecurity (Linux, Pentesting, Forensics)\n3. Get a Remote Job\n4. Move to Germany\n5. Build Open Source Tools`);
-
-      await typeLine('[phantekzy@linux ~]$ cd contact/');
-      insertBlock('[ OK ] Email   : <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>');
-      insertBlock('[ OK ] LinkedIn: <a href="https://linkedin.com/in/maini-lotfi" target="_blank">linkedin.com/in/maini-lotfi</a>');
-
-      await typeLine('[phantekzy@linux ~]$ cd socials/');
-      insertBlock('[ OK ] GitHub  : <a href="https://github.com/phantekzy" target="_blank">github.com/phantekzy</a>');
-      insertBlock('[ OK ] Twitter : <a href="https://x.com/mainilotfi" target="_blank">x.com/mainilotfi</a>');
-      insertBlock('[ OK ] YouTube : <a href="https://youtube.com/@phantekzy" target="_blank">youtube.com/@phantekzy</a>');
-
-      await typeLine('[phantekzy@linux ~]$ logout');
-      insertBlock('Goodbye. Thank you for visiting my terminal portfolio.');
-
-      const cursor = document.createElement('span');
-      cursor.className = 'cursor';
-      terminal.appendChild(cursor);
     }
-
-    runTerminal();
+    function newPrompt(){
+      const line = document.createElement('div'); line.className='line';
+      const prompt = document.createElement('span'); prompt.className='prompt'; prompt.textContent='[phantekzy@portfolio ~]$ ';
+      const input = document.createElement('input'); input.id='cmdline'; input.autocomplete='off';
+      line.append(prompt,input); terminal.append(line);
+      input.focus(); addListeners(input);
+    }
+    function addListeners(input){
+      input.addEventListener('keydown', e=>{
+        if(e.key==='Enter'){
+          const cmd = input.value.trim(); history.push(cmd); histIdx=history.length;
+          input.disabled=true; execute(cmd);
+        } else if(e.key==='ArrowUp'){ if(histIdx>0){ histIdx--; input.value=history[histIdx]; }}
+        else if(e.key==='ArrowDown'){ if(histIdx<history.length-1){ histIdx++; input.value=history[histIdx]; } else input.value=''; }
+        else if(e.key==='Tab'){ e.preventDefault(); autocomplete(input); }
+      });
+    }
+    function autocomplete(input){
+      const cmds = Object.keys(commands);
+      const val = input.value; const matches = cmds.filter(c=>c.startsWith(val));
+      if(matches.length===1) input.value=matches[0]+' ';
+    }
+    const commands = {
+      help(){ print(Object.keys(commands).join(' | ')); },
+      about(){ print(marked.parse(data.about)); },
+      skills(){ print(marked.parse(data.skills)); },
+      projects(){ print(marked.parse(data.projects)); },
+      certifications(){ print(marked.parse(data.certifications)); },
+      goals(){ print(marked.parse(data.goals)); },
+      clear(){ terminal.innerHTML=''; },
+      theme(args){ const t=args[1]; if(themes.includes(t)){ document.body.className='theme-'+t; print('Theme set to '+t); } else print('Unknown theme'); },
+      resume(){ print('<a href="resume.pdf" download>Download Resume</a>'); },
+      contact(){ print('Email: <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>'); },
+      socials(){ print('GitHub | LinkedIn | X | YouTube'); },
+      exit(){ print('Goodbye!'); }
+    };
+    function execute(input){
+      if(!input) return newPrompt();
+      const args = input.split(' '), cmd=args[0];
+      if(commands[cmd]) commands[cmd](args);
+      else print(`command not found: ${cmd}`);
+      if(cmd!=='exit') newPrompt();
+    }
+    // Start
+    print('<pre>Welcome to phantekzy\'s terminal portfolio. Type <code>help</code> to get started.</pre>');
+    newPrompt();
   </script>
 </body>
 </html>
